# industrial-ai-platform

./: README.md
backend/: .gitignore  ML.md  alembic.ini  docker-compose.yml  pyproject.toml  token_gen.py
backend/alembic/: env.py
backend/alembic/versions/: 3b418b5951f8_create_assets_table.py  40df2be8f555_create_items_table.py  44f7e75a4517_create_items_table.py  74b8fcf6efe4_initial_schema.py  a1b2c3d4e5f7_seed_compressor_asset_type.py  acea8cf29071_add_users_table.py  ae880f291105_initial_schema.py  b2c3d4e5f6a8_seed_compressor_telemetry.py  b6ce753c7514_create_asset_types_table.py  bcda7e825c3a_create_metric_definitions_table.py  bcf099d22ce6_create_telemetry_records_table.py  c1a2b3d4e5f6_migrate_user_username_to_email.py  d2e3f4a5b6c7_add_soft_delete_to_assets.py  f1g2h3i4j5k6_add_ml_tables.py
backend/app/: main.py
backend/app/api/: main.py
backend/app/core/: config.py  security.py
backend/app/crud/: asset.py  asset_type.py  facility.py  item.py  metric_definition.py  ml_anomaly_event.py  ml_asset_baseline.py  ml_asset_health.py  ml_model.py  ml_prediction.py  organization.py  telemetry.py  user.py
backend/app/db/: base.py  session.py
backend/app/ml/: drift.py  feature_engineering.py  model_loader.py  scoring.py
backend/app/models/: __init__.py  asset.py  asset_type.py  facility.py  item.py  metric_definition.py  ml_anomaly_event.py  ml_asset_baseline.py  ml_asset_health.py  ml_model.py  ml_prediction.py  user.py  (+2 more)
backend/tests/: test_config.py  test_db.py  test_healthy.py  test_items.py  test_organizations.py  test_system.py  test_trainer.py
(+88 files in other folders)
