[tool.poetry]
name = "industrial-ai-platform_v1" 
version = "0.1.0" 
description = "Industrail AI Platform Backend" 
authors = ["Sreehari"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12" 
fastapi = "^0.115.0" 
uvicorn = { extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0" 
httpx = "^0.28.0"
ruff = "^0.11.0" 
black = "^25.0.0" 

[tool.black]
line-length = 88 

[tool.ruff]
line-length = 88 

[build-system] 
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"